[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deklinacija"
version = "1.7.0"
authors = [
  { name="urelja", email="code.relja@gmail.com" },
]
description = "A Python library for declension of personal names in Serbian"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/urelja/deklinacija"
"Bug Tracker" = "https://github.com/urelja/deklinacija/issues"